fixed social media alignment

--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ h3 span {
 .content_socials{
   max-width: 1250px;
   margin: auto;
-  padding-top: 70px;
+  padding-top: 120px;
   text-align: center;
 }
 
